deploy/overlay/frontend/webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-frontend
  template:
    metadata:
      labels:
        app: chatbot-frontend
    spec:
      containers:
      - name: chatbot-frontend
        image: yangboxin/chatbot-frontend:test11
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "2"
            memory: 2Gi
          limits:
            cpu: "2"
            memory: 2Gi
