deploy/overlay/frontend/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-frontend-service
spec:
  type: ClusterIP
  selector:
    app: chatbot-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
