deploy/overlay/frontend/webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rag.rutu-sh.com
      secretName: rag-tls-secret
  rules:
  - host: rag.rutu-sh.com
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chatbot-frontend-service
            port:
              number: 3000
